--- a/TestVSWebGit/TestVSWebGit.csproj
+++ b/TestVSWebGit/TestVSWebGit.csproj
@@ -66,6 +66,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="css\style.css" />
+    <Content Include="index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
